--- a/Module 15/Aura Component/ContactCreate/ContactCreate.cmp
+++ b/Module 15/Aura Component/ContactCreate/ContactCreate.cmp
@@ -1,96 +1,6 @@
-<aura:component controller="ContactCreateController">
-    <aura:attribute name="contactObj" type="Contact" default="{'sobjectType':'Contact',
-                                                             'FirstName':'',
-                                                             'LastName':'',
-                                                              'Phone':'',
-                                                              'Email':'',
-                                                              'Fax':''}" />
-
-    <aura:attribute name="contactName" type="String" />
-    <aura:attribute name="contactList" type="Contact[]" />
-    <aura:handler name="init" value="{!this}" action="{!c.showContacts}" />
-    <article class="slds-card">
-
-        <!-- For the contact logo and successfull message  -->
-        <div class="slds-card__header slds-grid">
-            <header class="slds-media slds-media_center slds-has-flexi-truncate">
-                <div class="slds-media__figure">
-                    <span class="slds-icon_container slds-icon-standard-account" title="account">            
-                        <lightning:icon iconName="standard:contact" alternativeText="Contact" />
-                    </span>
-                </div>
-                <div class="slds-media__body">
-                    <h2 class="slds-card__header-title">
-                        <span>Contact</span>
-                    </h2>
-                </div>
-                <!-- Successfull or error message  -->
-                <div class="slds-notify__content">
-                    <h2 class="slds-text-heading_small ">{!v.contactName}</h2>
-                </div>
-            </header>
-        </div>
-        <!-- For inputs  -->
-        <div class="slds-card__body  slds-card__body_inner">
-            <lightning:input aura:id="contactform" value="{!v.contactObj.FirstName}" label="First Name" placeholder="enter first Name..." />
-            <lightning:input aura:id="contactform" value="{!v.contactObj.LastName}" label="Last Name" placeholder="enter last Name..." required="true" />
-            <lightning:input aura:id="contactform" value="{!v.contactObj.Email}" label="Email" placeholder="enter email..." />
-            <lightning:input aura:id="contactform" type="number" min="10" value="{!v.contactObj.Phone}" label="Phone" placeholder="enter phone Number..." messageWhenRangeUnderflow="Minimum 10 digit required in number formate." />
-            <lightning:input aura:id="contactform" value="{!v.contactObj.Fax}" label="Fax" placeholder="enter fax..." />
-            <lightning:button label="Create Contact" title="Save" class="slds-m-top--medium" variant="brand" onclick="{! c.doSave }" />
-
-        </div>
-
-        <!-- To display list of contacts  -->
-        <div class="contactListBox">
-            <div class="contactListBoxTitle">
-                <h3>Contact List</h3>
-            </div>
-            <table class="slds-table slds-table_cell-buffer slds-table_bordered">
-                <thead>
-                    <tr>
-                        <th class="slds-text-title_caps" scope="col">
-                            <div class="slds-truncate" title="First Name">First Name</div>
-                        </th>
-                        <th class="slds-text-title_caps" scope="col">
-                            <div class="slds-truncate" title="Last Name">Last Name</div>
-                        </th>
-                        <th class="slds-text-title_caps" scope="col">
-                            <div class="slds-truncate" title="Email">Email</div>
-                        </th>
-                        <th class="slds-text-title_caps" scope="col">
-                            <div class="slds-truncate" title="Phone">Phone</div>
-                        </th>
-                        <th class="slds-text-title_caps" scope="col">
-                            <div class="slds-truncate" title="Fax">Fax</div>
-                        </th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    <aura:iteration items="{!v.contactList}" var="contObj" indexVar="index">
-                        <tr>
-                            <td data-label="First Name" scope="row">
-                                <div class="slds-truncate" title="FirstName">{!contObj.FirstName} </div>
-                            </td>
-                            <td data-label="Last Name">
-                                <div class="slds-truncate" title="LastName">{!contObj.LastName}</div>
-                            </td>
-                            <td data-label="Email">
-                                <div class="slds-truncate" title="Email">{!contObj.Email}</div>
-                            </td>
-                            <td data-label="Phone">
-                                <div class="slds-truncate" title="Phone">{!contObj.Phone}</div>
-                            </td>
-                            <td data-label="Fax">
-                                <div class="slds-truncate" title="Fax">{!contObj.Fax}</div>
-                            </td>
-
-                        </tr>
-
-                    </aura:iteration>
-                </tbody>
-            </table>
-        </div>
-    </article>
+<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId" access="global">
+    <aura:attribute name="fields" type="String[]" default="['FirstName','LastName','Email','Phone','Fax']" />
+    <aura:attribute name="recordId" type="String" />
+    <lightning:notificationsLibrary aura:id="notifLib" />
+    <lightning:recordForm aura:id="myRecordForm" recordId="{!v.recordId}" objectApiName="Contact" fields="{!v.fields}" columns="2" mode="edit" onsuccess="{!c.handleSuccess}" onerror="{!c.handleError}" />
 </aura:component>
