--- a/Module 10/Part1/InsertStudent.page
+++ b/Module 10/Part1/InsertStudent.page
@@ -1,9 +1,39 @@
-<apex:page controller="InsertStudentController" showHeader="false" sidebar="false">
-    <apex:form >
-        <apex:pageBlock title="Create New Student Record" id="recordBlock">
-            <apex:pageMessages ></apex:pageMessages>
-            <apex:inputText value="{!firstName}"/> 
-            <apex:commandButton value="Insert Student" action="{!insertStudent}" rerender="recordBlock"/>
-        </apex:pageBlock>
-    </apex:form>
+<apex:page sidebar="false" showHeader="false">
+    <head>
+        <script src="/soap/ajax/42.0/connection.js" type="text/javascript"></script>
+        <script type = "text/javascript">
+            var urlParams = new URLSearchParams(window.location.search);
+            function createStudentRecord() {
+                sforce.connection.sessionId = '{!$Api.Session_ID}';
+                var lastName = document.getElementById('StudentName').value;
+                var student = new sforce.SObject('Student__c');
+                student.LastName__c = lastName;
+                student.Name = lastName;
+                student.class__c = urlParams.get('id');
+                var retURL = urlParams.get('retURL');
+                var result = sforce.connection.create([student]);
+                if (result[0].getBoolean("success")) {
+                    alert("Student created with id : " + result[0].id);
+                    window.close();
+                    window.opener.location.href = retURL;
+                } 
+                else {
+                    alert("failed to create Student " + result[0]);
+                }
+            }
+        </script>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Add Students</title>
+        <apex:slds />
+    </head>
+    <body>
+        <apex:form >
+            <apex:pageBlock title="Create New Student Record" id="recordBlock">
+                <apex:pageMessages ></apex:pageMessages>
+                <input type="text" id="StudentName" required="true"/> 
+                <apex:commandButton value="Insert Student" onclick="createStudentRecord()" />
+            </apex:pageBlock>
+        </apex:form>
+    </body>
 </apex:page>
