--- a/Module 10/Part2/DeleteStudent.page
+++ b/Module 10/Part2/DeleteStudent.page
@@ -2,34 +2,36 @@
     <head>
         <script src="../../soap/ajax/42.0/connection.js" type="text/javascript"></script>
         <script>
-        var records =  '{!$CurrentPage.parameters.recs}';
+        var urlParams = new URLSearchParams(window.location.search);
+        var records = urlParams.get('recs');
+        var retURL = urlParams.get('retURL');
         recordsIds = records.split(',');
         function continueStudent(){ 
             sforce.connection.sessionId= "{!$Api.Session_ID}";
             var delResult = sforce.connection.deleteIds(recordsIds);
             if (delResult[0].getBoolean("success")) {
                 alert("Students are deleted");
-            } else {
+            } 
+            else {
                 alert("Students are failed to delete");
             }
             window.close();
-            window.opener.location.href = '/a00/o';
+            window.opener.location.href = retURL;
         }
         function cancelStudent(){
-            window.opener.location.href = '/a00/o';
+            window.opener.location.href = retURL;
             window.close();
-            }    
+        }    
         </script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Add Student In This Class</title>
-        <!-- Import the Design System style sheet -->
+        <title>Delete Students</title>
         <apex:slds />
     </head>
     <body>
         <apex:form >
-        <apex:commandButton value="Continue" onclick="continueStudent();" />
-        <apex:commandButton value="Cancel" onclick="return cancelStudent();" />
-    </apex:form>
+            <apex:commandButton value="Continue" onclick="continueStudent();" />
+            <apex:commandButton value="Cancel" onclick="return cancelStudent();" />
+        </apex:form>
     </body>
 </apex:page>
